# Clause_AI

./: .env.example  .gitignore  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  run.sh
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 849253919773_initial_schema.py
backend/scripts/: seed.py
backend/src/: config.py  database.py  dependencies.py  main.py
backend/src/api/: analyses.py  auth.py  documents.py  health.py  jobs.py  queries.py
backend/src/core/: chunker.py  embedder.py  file_storage.py  parser.py  security.py
backend/src/middleware/: logging.py
backend/src/models/: __init__.py  analysis.py  chunk.py  document.py  job.py  query.py  refresh_token.py  user.py
backend/src/rag/: chains.py  output_parsers.py  prompts.py  retriever.py  vector_store.py
backend/src/schemas/: analysis.py  auth.py  document.py  job.py  query.py
backend/src/tasks/: celery_app.py  cleanup.py  process_document.py  run_analysis.py
backend/tests/: conftest.py
backend/tests/fixtures/: sample_contract.docx  sample_employment.txt
backend/tests/integration/: test_analysis_api.py  test_auth_api.py  test_documents_api.py
backend/tests/unit/: test_chunker.py  test_file_storage.py  test_output_parsers.py  test_parser.py  test_security.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx
frontend/src/api/: analyses.ts  auth.ts  client.ts  documents.ts  queries.ts
frontend/src/hooks/: useAuth.ts  useDocumentStatus.ts  (+1 more)
(+32 files in other folders)
